# erneuerbarer-ueberschuss-mastobot

./: .gitignore  Makefile  Pipfile  README.md  euemastobot.py  pyproject.toml  test_create_chart.py  test_energycharts_request.py  test_mastodon_connection.py  test_time_slots.py
.github/: dependabot.yml
.github/workflows/: python-app.yml
test/: api-response-two-timeslots.json
test_data/: two_slots_ending_the_day.json  whole_day_above_threshold.json
