[project]
name = ""
version = "0.0.1"
requires-python = "~=3.11"
dependencies = [
    "requests==2.32.4",
    "mastodon.py==1.8.1",
    "python-dotenv==1.1.0",
    "playwright==1.53.0",
]

[dependency-groups]
dev = [
    "ruff==0.12.0",
    "pytest==8.4.2",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
