[project]
name = ""
version = "0.0.1"
requires-python = "~=3.11.0"
dependencies = [
    "requests==2.32.5",
    "mastodon.py==2.1.4",
    "python-dotenv==1.2.1",
    "playwright==1.57.0",
]

[dependency-groups]
dev = [
    "ruff==0.14.14",
    "pytest==9.0.2",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
