[project]
name = "erneuerbarer-ueberschuss-mastobot"
version = "0.0.1"
requires-python = ">=3.11.0, <3.15.0"
dependencies = [
    "requests==2.34.1",
    "mastodon.py==2.2.1",
    "python-dotenv==1.2.2",
    "playwright==1.59.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.13",
    "pytest==9.0.3",
    "ty>=0.0.28",
    "pip-audit>=2.10.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
